--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.1",
+    "jquery": "^3.6.1",
+    "noty": "^3.2.0-beta-deprecated",
     "swiper": "^8.4.5",
     "v-viewer": "^3.0.11",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-carousel": "^0.2.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
