--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "swiper": "^8.4.5",
     "v-viewer": "^3.0.11",
     "vue": "^3.2.41",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
     "vue3-carousel": "^0.2.8"
   },
